The first version of codaent

--- a/index.html
+++ b/index.html
@@ -3,84 +3,111 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>Clodant</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <a href=""></a>
+    <div class="main-container">
+            <header>
+                    <nav class="navbar">
+                    <p class="logo">Clodaent</p>
 
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
+                    <ul class="nav-links-container">
+                        <li><a class="nav-links" href="#">Pricing</a></li>
+                        <li><a class="nav-links" href="#">Learn more</a></li>
+                        <li><a class="nav-links" href="#">Contact us</a></li>
+                    </ul>
 
-        </nav>
+                </nav>
 
-        <section>
-            <div>
-                <h1></h1>
-                <p></p>
-                <a href=""></a>
+                <section class="hero-section">
+                    <div class="hero-container">
+                        <div class="hero-text">
+                            <h1>Revive to your Canines <br>with <span>Clodaent</span></h1>
+                            <p class="hero-p">Sign up and clone your dog today. All we need is a little hair of your canine best friends and buffer time and voila you have your best buddy back with new memories to create.</p>
+                            <a class="button button-primary" href="#">Sign up</a>
+                        </div>
 
-            </div>
+                        <img class="hero-img" src="images/img1.jpg" alt="Identic dogs">
 
-            <img src="" alt="">
+                    </div>
 
-        </section>
+                </section>
 
-    </header>
+            </header>
 
-    <section>
-        <h2></h2>
+            <section class="feature-section">
+                <h2>The best cloning service.</h2>
 
-        <div>
-            <img src="" alt="">
-            <p></p>
-        </div>
+                <div class="features-container">
 
-        <div>
-            <img src="" alt="">
-            <p></p>
-        </div>
+                    <div class="features">
+                        <div class="img-container"><img class="feature-img" src="images/img2.jpg" alt=""></div>
+                        <div class="p-container"><p class="feature-p">Cloning can be used to improve characteristics, such as disease resistance.</p></div>
+                    </div>
 
-        <div>
-            <img src="" alt="">
-            <p></p>
-        </div>
+                    <div class="features">
+                        <div class="img-container"><img class="feature-img" src="images/img3.jpg" alt=""></div>
+                        <div class="p-container"><p class="feature-p">Cloning can help preserve endangered species. Protect your dogs legacy. </p></div>
+                    </div>
 
-        <div>
-            <img src="" alt="">
-            <p></p>
-        </div>
+                    <div class="features">
+                        <div class="img-container"><img class="feature-img" src="images/img4.jpg" alt=""></div>
+                        <div class="p-container"><p class="feature-p">The dog's embryo incubation is four weeks and the overall process take 3 months</p></div>
+                    </div>
 
-    </section>
+                    <div class="features">
+                        <div class="img-container"><img class="feature-img" src="images/img5.jpg" alt=""></div>
+                        <div class="p-container"><p class="feature-p">Our latest technology, gives the possibility to increase dogs IQ and learning ability</p></div>
+                    </div>
 
+                </div>
 
-    <article>
-        <p></p>
-
-        <h5></h5>
-
-    </article>
-
-    <section>
-        <div>
-            <h3></h3>
-            <p></p>
-
-            <a href=""></a>
-
-        </div>
-
-    </section>
+            </section>
 
 
-    <footer>
-        <p></p>
+            <article>
+                <figure class="quote-container">
+                    <p class="quote">
+                        "Dogs' lives are short, too short... you know the pain is coming, you're going to lose a dog, and there's going to be great anguish, so you live fully in the moment with her... However, with advances in scientific research, we are finding ways to extend that cherished bond and explore the potential of tomorrow's technology, turning 'what if' into 'what's next'."
+                    </p>
+                    <figcaption class="cite">
+                        <cite>— Adapted from Dean Koontz's "False Memory", with added reflection on scientific progress</cite>
+                    </figcaption>
+                </figure>
 
-    </footer>
+            </article>
+
+            <section class="cta-section">
+                <div class="cta-card">
+                    <div cta-text>
+                        <h3>Sign up now and be happy!</h3>
+                        <p>Click the sign up and fill our form to get your dog clone today!</p>
+
+                    </div>
+
+                    <a class="button outline" href="#">Sign up</a>
+
+                </div>
+
+            </section>
+
+
+            <footer>
+                <p class="copyright">Copyright  &COPY;  Clodant Lab 2025</p>
+
+            </footer>
+
+
+
+    </div>
+        
     
 </body>
 </html>
